--- a/Xtern.ipynb
+++ b/Xtern.ipynb
@@ -583,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![IMG_0483.jpg](attachment:IMG_0483.jpg)"
+    "![TSPforXtern.jpg](attachment:TSPforXtern.jpg)"
    ]
   },
   {
